argocd/04-under-construction/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: under-construction-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.ensembletechnologies.xyz
    - ensembletechnologies.xyz
    secretName: wildcard-ensembletechnologies-xyz
  rules:
  - host: www.ensembletechnologies.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: under-construction
            port:
              number: 80
  - host: ensembletechnologies.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: under-construction
            port:
              number: 80
